<resources>
    <string name="app_name">Assignment04</string>
    <string name="welcome_str">Welcome !!</string>
    <string name="start_str">Start</string>
    <string name="create_title">Create User Info</string>
    <string name="name_str">Name:</string>
    <string name="email">Email:</string>
    <string name="role">Role:</string>
    <string name="role_str">Role:</string>
    <string name="names_str">Enter Name</string>
    <string name="email_str">Enter Email</string>
    <string name="roles_str">Enter Role</string>
    <string name="profile_activity" />
    <string name="profile_title">Profile</string>
    <string name="next_botton">Next</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="other">Other</string>
    <string name="update_str">Update</string>
    <string name="submit_button">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="edit_title">Edit User Info</string>
</resources>